# kicks

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/guitarix-rpc/: Cargo.toml
crates/guitarix-rpc/src/: client.rs  connection.rs  error.rs  helpers.rs  launcher.rs  lib.rs  types.rs
crates/kicks-core/: Cargo.toml
crates/kicks-core/src/: amp_preset.rs  config.rs  lib.rs  midi.rs  persistence.rs  preset.rs  scene.rs  signal_chain.rs
crates/kicks-dsp/: Cargo.toml
crates/kicks-dsp/src/: audio_io.rs  bass_amp.rs  convolution.rs  engine.rs  fft_convolution.rs  lib.rs  looper.rs  metronome.rs  nam.rs  param.rs  plugins.rs  tuner.rs
docs/: ai-assistant.md  index.md  ir-browser.md  keyboard-shortcuts.md  live-mode.md  midi.md  presets.md  settings.md  signal-chain.md  troubleshooting.md
flatpak/: com.kicks.guitar-workstation.yml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/audio/: audioEngine.ts
frontend/src/components/: ErrorBoundary.tsx  SetupWizard.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  Toolbar.test.tsx  Toolbar.tsx
frontend/src/components/AmpPresets/: AmpPresetSelector.tsx
frontend/src/components/SignalChain/: AudioFlow.tsx  ParamSlider.tsx  PedalBoard.tsx  PedalSlot.tsx  Visualizer.tsx
frontend/src/hooks/: useHotkeys.ts  useTauri.ts
frontend/src/lib/: tauri.test.ts  tauri.ts
frontend/src/pages/: AIAssistant.tsx  IRBrowser.tsx  LiveMode.tsx  MidiConfig.tsx  NAMBrowser.tsx  Presets.tsx  Settings.tsx  SignalChain.tsx  Tools.tsx
frontend/src/stores/: engineStore.test.ts  engineStore.ts  midiStore.test.ts  midiStore.ts  presetsStore.test.ts  presetsStore.ts  settingsStore.test.ts  settingsStore.ts
frontend/src/theme/: theme.ts
frontend/src/types/: tauri.ts
scripts/: build-all.sh  build-flatpak.sh  build-snap.sh
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  lib.rs  midi.rs
src-tauri/src/commands/: ai.rs  amp_presets.rs  bass_amp.rs  engine.rs  ir.rs  looper.rs  metronome.rs  midi.rs  mod.rs  nam.rs  presets.rs  scenes.rs  settings.rs  signal_chain.rs  tuner.rs
