[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/guitarix-rpc",
    "crates/kicks-core",
    "crates/kicks-dsp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Kicks Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
jack = "0.9"
fundsp = "0.20"
log = "0.4"
hound = "3.5"
walkdir = "2"
midir = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
cpal = "0.17"
ringbuf = "0.4"
rustfft = "6"
realfft = "3"
