[package]
name = "kicks-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
tracing.workspace = true
