[package]
name = "kicks-dsp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jack = { workspace = true, optional = true }
fundsp = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }

[features]
default = ["jack-backend", "cpal-backend", "fft-convolution"]
jack-backend = ["dep:jack"]
fundsp-dsp = ["dep:fundsp"]
cpal-backend = ["dep:cpal", "dep:ringbuf"]
fft-convolution = ["dep:rustfft", "dep:realfft"]
